@@ -293,6 +293,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * Allow '0' to be an accesskey.
 * (bug 8063) Use language-dependent sorting in client-side sortable tables
 * (bug 16160) Suggestions box should be resized from left for RTL wikis
+* (bug 11533) Fixed insane slowdown when in read-only mode for long periods
+  of time with CACHE_NONE (default objectcache table configuration).
 
 === API changes in 1.14 ===
 
